tests/invalidTest/other/break_notin_for_or_while.q
# EXPECT the break command must be in while or for loop
def void errorTest(){
    if true
    then break
}